--- a/css/index.sass
+++ b/css/index.sass
@@ -15,72 +15,129 @@ footer
 
 .movie_box_wrapper
 	padding: 1vw
-	font-size: 2vmax !important
+	font-size: 3.6vmin !important
 
-.text-box
+.movie_box
+	width: 100%
+
+.movie_box img
+	padding: 1vw
+	border-radius: 0.5vw
+	height: 40vw
+
+.text_box
 	padding: 1vw 1vw 1vw 0
+	width: 100%
+	height: auto
 	
-
 .like_text
 	display: inline-block
 	margin-bottom: 0
 
+.like_icon
+	padding: 0 1.5vw 0 1.5vw !important
+
 .like_pad
-	padding: 0 0.4vw 0 0.4vw
+	font-size: 4.5vmin
 
 .btn
 	border: none
 
-.circle
-	padding: 0.5vw
+.like_circle
 	border-radius: 50%
-	border: none
-	width: 100%
+	width: 6vw
+	height: 6vw
 	
-.movie_box_wrapper img
-	padding: 1vw
-	border-radius: 0.5vw
-	width: auto
-	height: 25vh
+.like_circle h3
+	margin: auto
+
+h1
+	font-size: 7vw
+
+h2
+	font-size: 3.5vw 
+
+h3
+	font-size: 4.5vmin
+	//margin: 0
 
 @media only screen and (min-width: 768px)
-	.like_button
-		padding: 0.7vw
+	.like_circle
+		max-width: 50px
+		max-height: 50px
 	
+	.like_icon
+		padding: 0 1vw 0 1vw !important
+
+	h1
+		font-size: 6vw
+
 	h3
-		font-size: 2.2vmin !important
+		font-size: 3vw
 		font-weight: bolder
 
-	.movie_box_wrapper, h4
+	.movie_box_wrapper
 		font-size: 1.8vmin !important
+
+	.like_pad
+		font-size: 2.5vmax
 
 	.movie_box_wrapper img
-		height: 23vh
+		height: 27vw
 
 @media only screen and (min-width: 992px)
-	.like_button
-		padding: 0.5vw
-	
-	h3
-		font-size: 1.8vmin !important
-		font-weight: bolder
+	.like_circle
+		max-width: 35px
+		max-height: 35px
 
-	.movie_box_wrapper, h4
+	.like_pad
+		font-size: 2vmax
+
+	.like_icon
+		padding: 0 0.5vw 0 0.5vw !important
+	
+	h1
+		font-size: 4vw !important
+
+	h2
+		font-size: 2vw !important
+
+	h3
+		font-size: 1.5vw !important
+
+	.movie_box_wrapper
 		font-size: 1.4vmin !important
 
 	.movie_box_wrapper img
-		height: 23vh
+		height: 21vw
 
 @media only screen and (min-width: 1200px)
-	.like_button
-		padding: 0.4vw
+	.like_circle
+		max-width: 30px
+		max-height: 30px
+
+	.like_pad
+		font-size: 1vmax
+
+	.like_icon
+		padding: 0 0.5vw 0 0.5vw !important
 	
+	h1
+		font-size: 5vmin !important
+
+	h2
+		font-size: 3vmin !important
+
 	h3
-		font-size: 1.7vmin !important
-		font-weight: bolder
+		font-size: 1.2vw !important
 
-	.movie_box_wrapper, h4
-		font-size: 1.3vmin !important
+	.movie_box_wrapper
+		font-size: 0.9vw !important
+		padding: 0.5vw
 
-	.movie_box_wrapper img
-		height: 23vh
+	.movie_box img
+		height: 15.5vw
+		padding: 0.5vw
+
+	.text_box
+		padding: 0.5vw 0.5vw 0.5vw 0.1vw
